# slogit

./: README.md  pyproject.toml  pyproject.toml 18-51-26-230.toml
.github/workflows/: ci.yml
src/slogger/: formatters.py  logger.py
src/slogit/: config.py  logger.py
tests/: test_structured_logger.py
