[project]
name = "slogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jprobrien", email = "98370624+89jobrien@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]
